--- a/index.html
+++ b/index.html
@@ -4,94 +4,168 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hänga gubbe — Multiplayer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database-compat.js"></script>
   <style>
+    :root {
+      --bg1: #0d0d0f;
+      --bg2: #1a1a1f;
+      --panel: rgba(255,255,255,0.05);
+      --accent: #f5a623;
+      --accent2: #f57c00;
+      --text: #ffffff;
+      --text-dim: #bbbbbb;
+    }
+
     body {
-      font-family: sans-serif;
-      text-align: center;
-      background: #f4f4f4;
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(160deg, var(--bg1), var(--bg2));
+      color: var(--text);
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      padding: 40px 20px;
+    }
+
+    #gameContainer {
+      background: var(--panel);
+      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      box-shadow: 0 0 25px rgba(0,0,0,0.5);
+      max-width: 500px;
+      width: 100%;
       padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      font-weight: 600;
+      color: var(--accent);
+      letter-spacing: 1px;
+      margin-bottom: 10px;
+      text-shadow: 0 0 10px rgba(245,166,35,0.6);
+    }
+
+    #scoreboard {
+      background: rgba(255,255,255,0.08);
+      border-radius: 12px;
+      padding: 10px;
+      margin-bottom: 15px;
+      font-weight: 600;
+      display: flex;
+      justify-content: space-around;
+      color: var(--accent);
+    }
+
+    #hangman {
+      width: 80%;
+      max-width: 300px;
+      aspect-ratio: 200/250;
+      background: #111;
+      border: 1px solid #333;
+      border-radius: 8px;
+      margin: 10px auto;
+      display: block;
     }
 
     #word {
-      font-size: 6vw;
-      letter-spacing: 0.5em;
-      margin: 20px 0;
-      word-wrap: break-word;
+      font-size: 2rem;
+      letter-spacing: 0.3em;
+      margin: 15px 0;
+    }
+
+    #turnIndicator {
+      font-weight: 600;
+      margin-bottom: 10px;
+      transition: all 0.3s ease;
     }
 
     #letters {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 5px;
+      gap: 6px;
       margin: 10px 0;
     }
 
     #letters button {
-      padding: 1rem;
-      font-size: 1.2rem;
-      min-width: 40px;
-      flex: 1 1 40px;
-      border-radius: 8px;
+      padding: 0.6rem 0.8rem;
+      font-size: 1.1rem;
+      background: var(--accent);
+      border: none;
+      border-radius: 6px;
+      color: #111;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    #letters button:hover:not(:disabled) {
+      background: var(--accent2);
+      transform: translateY(-2px);
+    }
+
+    #letters button:disabled {
+      opacity: 0.3;
+      cursor: default;
     }
 
     #message {
-      font-size: 5vw;
-      margin: 15px 0;
-    }
-
-    #link {
-      margin: 10px 0;
-      color: blue;
-      word-break: break-word;
-    }
-
-    input, button {
       font-size: 1.2rem;
-      padding: 0.8rem;
-      border-radius: 8px;
-      margin: 5px;
-    }
-
-    #hangman {
-      width: 80%;
-      max-width: 300px;
-      height: auto;
-      aspect-ratio: 200/250;
-      margin: 20px auto;
-      border: 1px solid #ccc;
-      background: white;
-    }
-
-    #restartBtn, #newWordBtn {
-      margin-top: 15px;
-      padding: 10px 20px;
-      font-size: 1rem;
-      display: none;
+      margin: 10px 0;
+      color: var(--accent);
     }
 
     #lobby {
-      margin-top: 15px;
-      font-size: 1.1rem;
-      background: #fff;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0 0 4px rgba(0,0,0,0.1);
-      max-width: 320px;
-      margin-left: auto;
-      margin-right: auto;
+      margin-top: 10px;
+      font-size: 1rem;
+      color: var(--text-dim);
+      line-height: 1.4;
     }
 
-    #turnIndicator {
-      font-size: 1.3rem;
-      font-weight: bold;
-      margin-bottom: 10px;
+    #link {
+      color: var(--accent);
+      word-break: break-all;
+      margin-top: 10px;
+    }
+
+    input, button {
+      font-family: "Poppins", sans-serif;
+      border: none;
+      border-radius: 8px;
+      padding: 0.8rem 1rem;
+      font-size: 1rem;
+      margin: 5px;
+      outline: none;
+    }
+
+    #wordInput {
+      width: 70%;
+      background: #222;
+      color: var(--text);
+      border: 1px solid #333;
+    }
+
+    #createBtn, #restartBtn, #newWordBtn {
+      background: var(--accent);
+      color: #111;
+      font-weight: 600;
+      cursor: pointer;
       transition: all 0.3s ease;
     }
 
-    /* 👀 blinking eyes animation */
+    #createBtn:hover, #restartBtn:hover, #newWordBtn:hover {
+      background: var(--accent2);
+      transform: translateY(-2px);
+    }
+
+    #restartBtn, #newWordBtn {
+      display: none;
+      margin-top: 10px;
+    }
+
     .blink {
       animation: blink 1.5s infinite;
     }
@@ -102,54 +176,47 @@
     }
 
     @media (max-width: 600px) {
-      #word {
-        font-size: 8vw;
-        letter-spacing: 0.3em;
-      }
-      #letters button {
-        padding: 0.6rem;
-        font-size: 1rem;
-      }
-      #hangman {
-        width: 90%;
-        max-width: 250px;
-      }
+      #word { font-size: 7vw; }
     }
   </style>
 </head>
 <body>
-  <h1>🇸🇪 Hänga gubbe — Multiplayer</h1>
+  <div id="gameContainer">
+    <h1>HÄNGA GUBBE — MULTIPLAYER</h1>
 
-  <div id="setup">
-    <input id="wordInput" placeholder="Skriv ett ord..." />
-    <button id="createBtn">Skapa spel</button>
-  </div>
+    <div id="setup">
+      <input id="wordInput" placeholder="Skriv ett ord..." />
+      <button id="createBtn">Skapa spel</button>
+    </div>
 
-  <div id="game" style="display:none;">
-    <canvas id="hangman"></canvas>
-    <div id="word"></div>
-    <div id="turnIndicator"></div>
-    <div id="letters"></div>
-    <div id="message"></div>
-    <div id="lobby"></div>
-    <p id="link"></p>
-    <button id="restartBtn">🔁 Spela igen</button>
-    <button id="newWordBtn">✍️ Välj nytt ord</button>
+    <div id="game" style="display:none;">
+      <div id="scoreboard">
+        🧑 Axwell: <span id="scoreHost">0</span> &nbsp;|&nbsp; 👤 Gäst: <span id="scoreGuest">0</span>
+      </div>
+      <canvas id="hangman"></canvas>
+      <div id="word"></div>
+      <div id="turnIndicator"></div>
+      <div id="letters"></div>
+      <div id="message"></div>
+      <div id="lobby"></div>
+      <p id="link"></p>
+      <button id="restartBtn">🔁 Spela igen</button>
+      <button id="newWordBtn">✍️ Välj nytt ord</button>
+    </div>
   </div>
 
   <script>
   window.onload = () => {
-
-    // 🔥 Firebase setup (replace with your own)
+    // 🔥 Firebase config (replace with your own)
     const firebaseConfig = {
-  apiKey: "AIzaSyAN9URR47HIBwIuBP3kSu5Rv_Ys0ef72-Q",
-  authDomain: "hangman-6a99e.firebaseapp.com",
-  databaseURL: "https://hangman-6a99e-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "hangman-6a99e",
-  storageBucket: "hangman-6a99e.firebasestorage.app",
-  messagingSenderId: "992689481911",
-  appId: "1:992689481911:web:6461e931ba4d96879ec532",
-  measurementId: "G-W1HFVTC23L"
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_AUTH_DOMAIN",
+      databaseURL: "YOUR_DB_URL",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_STORAGE_BUCKET",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID",
+      measurementId: "YOUR_MEASUREMENT_ID"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
@@ -163,15 +230,17 @@
     const linkEl = document.getElementById("link");
     const restartBtn = document.getElementById("restartBtn");
     const newWordBtn = document.getElementById("newWordBtn");
-    const turnIndicator = document.getElementById("turnIndicator");
     const canvas = document.getElementById("hangman");
     const ctx = canvas.getContext("2d");
+    const turnIndicator = document.getElementById("turnIndicator");
+    const scoreHostEl = document.getElementById("scoreHost");
+    const scoreGuestEl = document.getElementById("scoreGuest");
 
+    const letters = [..."ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖ"];
     const urlParams = new URLSearchParams(window.location.search);
     const gameId = urlParams.get("game");
-    const letters = [..."ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖ"];
 
-    let nickname = "Axwell"; // default for host
+    let nickname = "Axwell";
     let isHost = false;
 
     // 🧭 Host creates game
@@ -185,21 +254,23 @@
         wrong: 0,
         over: false,
         players: { host: "Axwell" },
-        turn: "guest"
+        turn: "guest",
+        scores: { host: 0, guest: 0 }
       });
       window.location.href = `${location.origin}${location.pathname}?game=${id}`;
     };
 
-    // 🎮 Join game
+    // 🎮 Join existing game
     if (gameId) {
       setup.style.display = "none";
       gameDiv.style.display = "block";
       db.ref("games/" + gameId).get().then(async snap => {
         if (!snap.exists()) return (msg.textContent = "❌ Spelet kunde inte hittas.");
         const data = snap.val();
-        isHost = data.players?.host === "Axwell" && !data.players?.guest;
+        if (data.players?.host === "Axwell") isHost = true;
         if (!isHost) {
-          nickname = prompt("Ange ditt namn:") || "Gäst";
+          nickname = localStorage.getItem("hangmanNick") || prompt("Ange ditt namn:") || "Gäst";
+          localStorage.setItem("hangmanNick", nickname);
           await db.ref("games/" + gameId + "/players/guest").set(nickname);
         }
         startGame(gameId);
@@ -233,15 +304,18 @@
           const data = snap.val();
           if (!data || data.over) return;
           const myRole = nickname === "Axwell" ? "host" : "guest";
-          if (data.turn !== myRole) {
-            alert("Det är inte din tur!");
-            return;
-          }
+          if (data.turn !== myRole) return alert("Det är inte din tur!");
           btn.disabled = true;
           if (!data.guesses.includes(letter)) {
             data.guesses.push(letter);
             if (!data.word.includes(letter)) data.wrong++;
-            if (data.wrong >= 6 || data.word.split("").every(l => data.guesses.includes(l))) data.over = true;
+            if (data.wrong >= 6 || data.word.split("").every(l => data.guesses.includes(l))) {
+              data.over = true;
+              // update score
+              if (data.wrong < 6) {
+                data.scores[data.turn] += 1;
+              }
+            }
             await db.ref("games/" + id).set(data);
           }
         });
@@ -257,37 +331,33 @@
         showWord(data.word, data.guesses);
         drawHangman(data.wrong);
 
-        // Lobby display
+        scoreHostEl.textContent = data.scores?.host || 0;
+        scoreGuestEl.textContent = data.scores?.guest || 0;
+
         const players = data.players || {};
         const guestJoined = !!players.guest;
         lobbyDiv.innerHTML = `
-          <strong>Spelare i lobbyn:</strong><br>
           🧑 ${players.host || "Okänd"} (värd)<br>
           👤 ${players.guest || "Ingen ansluten ännu"}<br><br>
-          ${guestJoined ? (data.turn === "host" ? "🔤 Gästens tur att gissa!" : "✍️ Värden väljer ord!") : "⏳ Väntar på spelare ..."}
+          ${guestJoined ? "🎮 Båda spelare anslutna!" : "⏳ Väntar på spelare ..."}
         `;
 
-        // Turn indicator
         const myRole = nickname === "Axwell" ? "host" : "guest";
         if (data.turn === myRole) {
           turnIndicator.textContent = "🎯 Din tur att gissa!";
-          turnIndicator.style.color = "green";
+          turnIndicator.style.color = "#f5a623";
           turnIndicator.classList.remove("blink");
         } else {
           turnIndicator.innerHTML = "⏳ Vänta på din tur <span class='blink'>👀</span>";
-          turnIndicator.style.color = "gray";
+          turnIndicator.style.color = "#888";
         }
 
-        // Disable already guessed letters
         document.querySelectorAll("#letters button").forEach(b => {
           if (data.guesses.includes(b.textContent)) b.disabled = true;
         });
 
-        // End-of-game messages
         if (data.over) {
-          msg.textContent = data.wrong >= 6
-            ? `💀 Du förlorade! Ordet var ${data.word}`
-            : "🎉 Du vann!";
+          msg.textContent = data.wrong >= 6 ? `💀 Du förlorade! Ordet var ${data.word}` : "🎉 Du vann!";
           restartBtn.style.display = "inline-block";
           newWordBtn.style.display = "inline-block";
         } else {
@@ -304,6 +374,7 @@
       const sX = cw / 200, sY = ch / 250;
       ctx.clearRect(0, 0, cw, ch);
       ctx.lineWidth = 2 * Math.min(sX, sY);
+      ctx.strokeStyle = "#f5a623";
       ctx.beginPath();
       ctx.moveTo(10*sX,240*sY); ctx.lineTo(190*sX,240*sY);
       ctx.moveTo(50*sX,240*sY); ctx.lineTo(50*sX,20*sY);
@@ -328,10 +399,7 @@
 
     newWordBtn.onclick = async () => {
       const newWord = prompt("Ange ett nytt ord:").toUpperCase();
-      if (!newWord.match(/^[A-ZÅÄÖ]+$/)) {
-        alert("Endast bokstäver (A-Ö) tillåtna!");
-        return;
-      }
+      if (!newWord.match(/^[A-ZÅÄÖ]+$/)) return alert("Endast bokstäver (A-Ö) tillåtna!");
       const snap = await db.ref("games/" + gameId).get();
       const data = snap.val();
       const nextTurn = data.turn === "host" ? "guest" : "host";
@@ -341,11 +409,11 @@
         wrong: 0,
         over: false,
         players: data.players,
-        turn: nextTurn
+        turn: nextTurn,
+        scores: data.scores
       });
     };
-
-  }; // window.onload
+  };
   </script>
 </body>
 </html>
